# late-mate

./: .editorconfig  .envrc  .gitattributes  README.md  README.rd  justfile  package.json
.github/workflows/: landing.yml  website.yml
firmware/: .gitignore  Cargo.toml  build.rs  justfile  memory.x  rust-toolchain.toml
firmware/src/: firmware_version.rs  lib.rs  logging.rs  measurement_buffer.rs  scenario_buffer.rs  serial_number.rs  tasks.rs  temp_poller.rs
firmware/src/ads1220/: command.rs  config.rs
firmware/src/ads1220/config/: register0.rs  register1.rs  register2.rs  register3.rs
firmware/src/tasks/: indicator_led.rs  light_sensor.rs  reactor.rs  usb.rs
firmware/src/tasks/reactor/: bg_measurement_loop.rs  light_recorder_loop.rs  light_scenario_loop.rs  light_stream_loop.rs
firmware/src/tasks/usb/: bulk_comms.rs  cdc_logger.rs  device.rs  hid.rs  hid_sender.rs  mod.rs  serial_comms.rs
firmware/src/usb/: device.rs  mod.rs  serial.rs
gui/: package-lock.json  package.json
gui/script/: run.sh
gui/src-tauri/.cargo/: config.toml
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
gui/src-ui/: index.html  measure.js  setup.js  style.css
gui/src-ui/libs/: preact.mjs  signals-core.mjs  signals.mjs
host-and-shared/: Cargo.toml
host-and-shared/ads1220/src/: command.rs  config.rs
host-and-shared/late-mate-cli/: Cargo.toml  README.md  justfile
host-and-shared/late-mate-cli/assets/: HidReport.ts  README.md
host-and-shared/late-mate-cli/frontend/: index.html  package.json
host-and-shared/late-mate-cli/frontend/src/: main.ts
host-and-shared/late-mate-cli/scenarios/: move_mouse_right_once.json  tldraw.toml  type_a.toml
host-and-shared/late-mate-cli/src/: cli.rs  device.rs  lib.rs  nice_hid.rs  server.rs  statistics.rs
host-and-shared/late-mate-cli/src/cli/: device.rs  hid.rs  reset_to_firmware_update.rs  run_scenario.rs  scenario.rs  send_hid_report.rs  status.rs
host-and-shared/late-mate-cli/src/cli/device/: firmware_update.rs  status.rs
host-and-shared/late-mate-cli/src/cli/hid/: send.rs  show_type.rs
host-and-shared/late-mate-cli/src/cli/run_scenario/: file_output.rs
host-and-shared/late-mate-cli/src/cli/scenario/: example.rs  run.rs
host-and-shared/late-mate-cli/src/device/: agents.rs  dispatcher.rs  mod.rs  rxtx.rs  serial.rs  usb.rs
host-and-shared/late-mate-cli/src/device/agents/: dispatcher.rs  usb_rx.rs  usb_tx.rs
host-and-shared/late-mate-cli/src/device/rxtx/: rx.rs  tx.rs
host-and-shared/late-mate-cli/src/server/: mod.rs
host-and-shared/late-mate-device/: Cargo.toml
host-and-shared/late-mate-device/src/: agents.rs  hid.rs  lib.rs  scenario.rs  usb.rs
host-and-shared/late-mate-device/src/agents/: agent_watcher.rs  dispatcher.rs  usb_rx.rs  usb_tx.rs
host-and-shared/late-mate-shared/: Cargo.toml
host-and-shared/late-mate-shared/src/: comms.rs  lib.rs
host-and-shared/late-mate-shared/src/comms/: device_to_host.rs  hid.rs  host_to_device.rs  usb_interface.rs
host-and-shared/late-mate-shared/src/types/: hid.rs  host_to_device.rs  mod.rs
host_and_shared/: Cargo.toml
host_and_shared/ads1220/src/: lib.rs
host_and_shared/ads1220/src/config/: register1.rs
host_and_shared/late-mate-cli/: Cargo.toml
host_and_shared/late-mate-cli/frontend/: .envrc  .gitignore  index.html  justfile  package.json  vite.config.ts
host_and_shared/late-mate-cli/frontend/src/: WsServer.ts  main.ts  style.css  utils.ts
host_and_shared/late-mate-cli/frontend/src/pages/: duck.ts  measure.ts  monitor.ts  page.ts  remote.ts  status.ts
host_and_shared/late-mate-cli/src/: lib.rs  nice_hid.rs
host_and_shared/late-mate-cli/src/device/: commands.rs  mod.rs  rxtx.rs  serial.rs
host_and_shared/late-mate-cli/src/server/: api.rs  mod.rs
host_and_shared/late-mate-comms/: Cargo.toml
host_and_shared/late-mate-comms/src/: lib.rs
host_and_shared/late-mate-comms/src/types/: device_to_host.rs  hid.rs  host_to_device.rs
host_and_shared/late-mate-validation/: Cargo.toml  README.md  justfile
host_and_shared/late-mate-validation/src/: main.rs
landing/: README.md  index.html  style.css
script/: bootstrap.sh  run.sh
shared/: Cargo.toml  README.md
shared/ads1220/: Cargo.toml
shared/ads1220/src/config/: register0.rs  register2.rs  register3.rs
shared/comms/: Cargo.toml
shared/comms/src/: lib.rs
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src-ui/: index.html  index.js  setup.js  style.css
src-ui/libs/: hooks.js
tf/: dns_late_mate_com.tf  iam.tf  outputs.tf  providers.tf  s3_and_cloudfront.tf
tf/cloudfront_functions/: strip_plau.js  use_index_html.js
website/: .envrc  .gitignore  config.toml  index.html  justfile  package.json  secrets.examples.env  style.css  update-001.html  update-001.md  update-002.html  update-002.md  update-003.html  update-003.md  vite.config.ts
website/content/updates/: _index.md
website/content/updates/004/: index.md
website/functions/: plausible.js
website/functions/plau/: README.md
website/functions/plau/api/: event.ts
website/functions/plau/js/: script.outbound-links.tagged-events.js.ts
website/old/: index.html
website/public/old/: index.html
website/public/old/updates/001/: update-001.html
website/public/old/updates/003/: update-003.html  update-003.md
website/src/: asserts.ts  fonts.css  landing.css  main.ts  markdown.css  reset.css  style.css
website/src/thingies/: device_diagram.ts  latency_demo.ts
website/static/: _routes.json
website/static/fonts/: README.md
website/static/old/updates/001/: update-001.html
website/static/old/updates/002/: update-002.html  update-002.md
website/static/old/updates/003/: update-003.html
website/templates/: index.html
website/templates/includes/: base.html
website/templates/shortcodes/: image.html
website/templates/updates/: page.html
website/updates/001/: update-001.html
website/updates/002/: update-002.html  update-003.html  update-003.md
website/updates/004/: update.md
