[package]
name = "late-mate-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.1", features = ["defmt"] }
embassy-sync = { version = "0.5", features = ["defmt"] }
embassy-executor = { version = "0.5", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["defmt"] }
embassy-rp = { version = "0.1", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1", features = ["defmt"] }
embassy-futures = { version = "0.1" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"

panic-probe = { version = "0.3", features = ["print-defmt"] }

usbd-hid = "0.7"

numtoa = "0.2"

# must track postmark's version
heapless = "0.7.0"

postcard = "1"

# required for static_cell to compile (enables CAS emulation)
portable-atomic = { version = "1.6", features = ["critical-section"] }

static_cell = { version = "2", features = [] }

# shared stuff
ads1220 = { path = "../host-and-shared/ads1220" }
late-mate-shared = { path = "../host-and-shared/late-mate-shared" }
log = "0.4.21"
const-str = "0.5.7"

[build-dependencies]
vergen-gitcl = { version = "1.0.0-beta.2", default-features = false, features = [] }

# see https://embassy.dev/book/dev/getting_started.html#_it_didnt_work
[profile.release]
debug = 2
codegen-units = 1
lto = "thin"
