[package]
name = "late-mate-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-embedded-hal = { version = "0.1" }
embassy-sync = { version = "0.5" }
embassy-executor = { version = "0.5", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-time = { version = "0.3" }
embassy-rp = { version = "0.1", features = ["unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.2", features = ["max-interface-count-6"] }
embassy-futures = { version = "0.1" }

cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"

usbd-hid = "0.7"

numtoa = "0.2"

# must track postmark's version
heapless = "0.7.0"

postcard = "1"

# required for static_cell to compile (enables CAS emulation)
portable-atomic = { version = "1.6", features = ["critical-section"] }

static_cell = { version = "2", features = [] }

const-str = "0.5"

log = { version = "0.4", features = ["max_level_info"], optional = true }

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

embassy-usb-logger = { version = "0.2", optional = true }

# shared stuff
ads1220 = { path = "../host-and-shared/ads1220" }
late-mate-shared = { path = "../host-and-shared/late-mate-shared" }

[build-dependencies]
vergen-gitcl = { version = "1.0.0-beta.2", default-features = false, features = [] }

[features]
defmt = [
    "dep:defmt",
    "embassy-embedded-hal/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-rp/defmt",
    "embassy-usb/defmt",
    "late-mate-shared/defmt",
]
# defmt through an RTT probe
probe = [
    "defmt",
    "dep:defmt-rtt",
    "dep:panic-probe"
]
# …and this is for logging into usb serial, enabled by default
log = [
    "dep:log"
]
usb-log = [
    "log",
    "dep:embassy-usb-logger"
]
default = ["usb-log"]

[profile.dev]
opt-level = 3
codegen-units = 1
lto = "fat"

# see https://embassy.dev/book/dev/getting_started.html#_it_didnt_work
[profile.release]
debug = 2
codegen-units = 1
lto = "fat"
