[package]
name = "late-mate-cli"
version = "0.1.0"
edition = "2021"
authors = ["YNO Engineering <yno@dgroshev.com>"]
description = "Your CLI gateway to Late Mate"
default-run = "late-mate"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "time", "sync"] }
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
futures = "0.3.30"
serde = { version = "1", features = ["derive", "alloc"] }
serde_json = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18" }
headers = "0.4"
ts-rs = "8.1.0"

late-mate-device = { path = "../late-mate-device" }
toml = { version = "0.8.13", default-features = false, features = ["parse"] }
indicatif = "0.17.8"
