[package]
name = "late-mate-device"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "io-util", "time", "sync", "io-std"] }
thiserror = "1"
nusb = "0.1"
ts-rs = "8"
serde = { version = "1", features = ["derive", "alloc"] }
tracing = { version = "0.1", default-features = false, features = ["std", "log"] }
tokio-stream = "0.1"

late-mate-shared = { path = "../late-mate-shared", features = ["std"] }
async-stream = "0.3.5"
futures = "0.3.30"
rand = { version = "0.8.5", default-features = false, features = ["std", "small_rng"] }

