[package]
name = "late-mate-shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobs = { version = "0.2", default-features = false }
crc = "3"
defmt = "0.3"
# must track postmark's version
heapless = { version = "0.7.0", features = ["serde"] }
postcard = { version = "1", default-features = false, features = ["use-crc", "experimental-derive", "heapless", "use-defmt"] }
serde = { version = "1", default-features = false, features = ["derive"] }
# it's a transitive dependency, but I need to manage it's "std" feature that is a default feature
ssmarshal = { version = "1", default-features = false }
# must track embassy's version
usbd-hid = "0.6.1"

[features]
std = ["ssmarshal/std"]
