[package]
name = "late-mate-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "time", "sync"] }
tokio-serial = "5"

late-mate-comms = { path = "../late-mate-comms" }
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
usbd-hid = "0.7"
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
