[package]
name = "late-mate-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "time", "sync"] }
tokio-serial = "5"

late-mate-comms = { path = "../late-mate-comms", features = ["std"] }
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] }
usbd-hid = "0.7"
tokio-util = { version = "0.7.10", features = ["codec"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
serde = { version = "1", features = ["derive", "alloc"] }
serde_json = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.4"
ts-rs = "8.1.0"
