[package]
name = "late-mate-comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobs = { version = "0.2.3", default-features = false }
crc = "3.0.1"
defmt = "0.3.6"
postcard = { version = "1.0.8", default-features = false, features = ["use-crc", "experimental-derive"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
# must track embassy's version
usbd-hid = "0.6.1"
