[package]
name = "late-mate-comms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cobs = { version = "0.2", default-features = false }
crc = "3"
defmt = "0.3"
postcard = { version = "1", default-features = false, features = ["use-crc", "experimental-derive"] }
serde = { version = "1", default-features = false, features = ["derive"] }
# must track embassy's version
usbd-hid = "0.6.1"
